--- a/www/views/loginTmpl.html
+++ b/www/views/loginTmpl.html
@@ -4,7 +4,7 @@
             <img id="logonDMImg" src="./img/dmlogoshinygif.gif">
         </div>
         <input class="loginInputs" placeholder="Username" ng-model="user.username">
-        <input class="loginInputs" placeholder="Password" ng-model="user.password">
+        <input placeholder="Password" ng-model="user.password" type="password">
         <br>
         <div id="loginButtsDiv">
             <div class="loginButts" ng-click="login(user)">Login</div>
